@@ -1,40 +1,0 @@
-#undef HAVE_INET_PTON
-#undef HAVE_INET_ATON
-#undef HAVE_MSG_NOSIGNAL
-#undef HAVE_SOL_IP
-#undef HAVE_SOL_TCP
-#undef HAVE_SOL_IPV6
-#undef HAVE_IP_PKTINFO
-#undef HAVE_IPV6_PKTINFO
-#undef HAVE_IP_DONTFRAGMENT
-#undef HAVE_IP_MTU_DISCOVER
-#undef HAVE_STRUCT_IP_MREQN
-#undef HAVE_STRUCT_IP_MREQ
-#undef HAVE_PTHREAD_MUTEX_TIMEDLOCK
-#undef USE_MONO_MUTEX
-#undef HAVE_LARGE_FILE_SUPPORT
-#undef HAVE_NEW_ICONV
-#undef NAME_DEV_RANDOM
-#undef HAVE_CRYPT_RNG
-#undef HAVE_BOEHM_GC
-#undef USE_INCLUDED_LIBGC
-#undef DISABLE_SHARED_HANDLES
-#undef HAVE_TIMEZONE
-#undef HAVE_TM_GMTOFF
-#undef MONO_SIZEOF_SUNPATH
-#undef MONO_ZERO_ARRAY_LENGTH
-#undef PTHREAD_POINTER_ID
-#undef HAVE_GC_H
-#undef HAVE_GC_GCJ_MALLOC
-#undef HAVE_GC_ENABLE
-#undef WITH_BUNDLE
-#undef HAVE_GETHOSTBYNAME2_R
-#undef HAVE_ICU
-#undef HAVE_KW_THREAD
-#undef HAVE_SIGNBIT
-#undef USE_MACH_SEMA
-#undef HAVE_SOCKLEN_T
-#undef HAVE_TRUNCL
-#undef HAVE_AINTL
-#undef HAVE_SCANDIR
-#undef HAVE_WORKING_SIGALTSTACK
